Added dependencies and a new script to package file

--- a/package.json
+++ b/package.json
@@ -4,9 +4,21 @@
   "description": "Project for practicing authentication and authorization using nodejs, typescript and jwt",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tsx index.ts"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^20.14.10",
+    "tsx": "^4.16.2",
+    "typescript": "^5.5.3"
+  },
+  "dependencies": {
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2"
+  }
 }
